--- a/genindex.html
+++ b/genindex.html
@@ -224,8 +224,6 @@
         <li><a href="copyxnat.pyreporter.pyreporter.html#module-copyxnat.pyreporter.pyreporter">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.ui
 
@@ -233,6 +231,8 @@
         <li><a href="copyxnat.ui.html#module-copyxnat.ui">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.ui.copyxnat_command_line
 
@@ -347,6 +347,12 @@
 </li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatInResource.create_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatInResource class method)</a>
 </li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.create_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatItem class method)</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources.create_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources class method)</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.create_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources class method)</a>
+</li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatOutResource.create_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatOutResource class method)</a>
 </li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatProject.create_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatProject class method)</a>
@@ -354,6 +360,8 @@
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatReconstruction.create_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatReconstruction class method)</a>
 </li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResource.create_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatResource class method)</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase.create_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase class method)</a>
 </li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatScan.create_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatScan class method)</a>
 </li>
