--- a/_modules/copyxnat/xnat/xnat_interface.html
+++ b/_modules/copyxnat/xnat/xnat_interface.html
@@ -493,12 +493,13 @@
                     <span class="n">specific_tags</span><span class="o">=</span><span class="p">[</span>
                         <span class="n">pydicom</span><span class="o">.</span><span class="n">datadict</span><span class="o">.</span><span class="n">tag_for_keyword</span><span class="p">(</span><span class="s1">&#39;SeriesInstanceUID&#39;</span><span class="p">)]</span>
                 <span class="p">)</span>
-                <span class="n">metadata</span><span class="p">[</span><span class="s1">&#39;series_instance_uid&#39;</span><span class="p">]</span> <span class="o">=</span> \
-                    <span class="n">tags</span><span class="p">[</span><span class="s1">&#39;SeriesInstanceUID&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">value</span>
+                <span class="k">if</span> <span class="s1">&#39;SeriesInstanceUID&#39;</span> <span class="ow">in</span> <span class="n">tags</span><span class="p">:</span>
+                    <span class="n">metadata</span><span class="p">[</span><span class="s1">&#39;series_instance_uid&#39;</span><span class="p">]</span> <span class="o">=</span> \
+                        <span class="n">tags</span><span class="p">[</span><span class="s1">&#39;SeriesInstanceUID&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">value</span>
 
         <span class="k">except</span> <span class="ne">Exception</span> <span class="k">as</span> <span class="n">exc</span><span class="p">:</span>  <span class="c1"># pylint: disable=broad-except</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span><span class="s1">&#39;Error when attempting to parse file </span><span class="si">{}</span><span class="s1">: &#39;</span>
-                                  <span class="s1">&#39;Error: </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">local_file</span><span class="p">,</span> <span class="n">exc</span><span class="p">))</span>
+                                  <span class="s1">&#39;Error: </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">local_file</span><span class="p">,</span> <span class="nb">str</span><span class="p">(</span><span class="n">exc</span><span class="p">)))</span>
         <span class="k">return</span> <span class="n">metadata</span></div>
 
 
