--- a/genindex.html
+++ b/genindex.html
@@ -468,6 +468,8 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.get_archive_path">get_archive_path() (copyxnat.xnat.xnat_interface.XnatServer method)</a>
+</li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.get_attribute">get_attribute() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
 
       <ul>
@@ -498,10 +500,10 @@
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.get_or_create_child">get_or_create_child() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
-      <li><a href="versioneer.html#versioneer.get_root">get_root() (in module versioneer)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="versioneer.html#versioneer.get_root">get_root() (in module versioneer)</a>
+</li>
       <li><a href="copyxnat.utils.versioning.html#copyxnat.utils.versioning.get_version">get_version() (in module copyxnat.utils.versioning)</a>
 
       <ul>
@@ -839,8 +841,16 @@
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.project_name_metadata">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
       </ul></li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.project_server_path">project_server_path() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatProject.project_server_path">(copyxnat.xnat.xnat_interface.XnatProject method)</a>
+</li>
+      </ul></li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.projects">projects() (copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.provide_metadata">provide_metadata() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
 
       <ul>
@@ -849,8 +859,6 @@
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.provide_metadata">(copyxnat.xnat.xnat_interface.XnatServer method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter">PyReporter (class in copyxnat.pyreporter.pyreporter)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporterCodes">PyReporterCodes (class in copyxnat.pyreporter.pyreporter)</a>
@@ -1133,6 +1141,8 @@
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.xml_from_string">xml_from_string() (copyxnat.xnat.xml_cleaner.XmlCleaner static method)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner">XmlCleaner (class in copyxnat.xnat.xml_cleaner)</a>
+</li>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_FILE_TAG">XNAT_FILE_TAG (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_IMAGE_SCAN_DATA_TAG">XNAT_IMAGE_SCAN_DATA_TAG (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
